<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/dashboard_layout"
    tools:context=".Activities.DashboardActivity">

    <com.google.android.material.card.MaterialCardView
        style="@style/dashBoardCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="16dp"
        app:strokeWidth="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView_dashboard_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/alata"
                android:paddingTop="16dp"
                android:text="Spendistry Business"
                android:textColor="@color/windowBlue"
                android:textSize="36sp" />

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbar_dashboard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="16dp"
                android:theme="@style/ActionBarStyle"
                app:menu="@menu/dashboard_menu">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </com.google.android.material.appbar.MaterialToolbar>
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/materialCardView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="25dp"
                    android:layout_marginEnd="5dp"
                    style="@style/cardViewTheme"
                    android:layout_marginBottom="25dp"
                    app:cardCornerRadius="12dp"
                    app:cardElevation="8dp"
                    app:strokeWidth="0dp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="16dp"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/alata"
                            android:text="@string/monthly_income_n18000"
                            android:textColor="#03045E"
                            android:textSize="24sp" />
                        <TextView
                            android:id="@+id/monthly_income"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/alata"
                            android:textColor="@color/material_white"
                            android:textSize="24sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/alata"
                            android:text="@string/yearly_income_n180000000"
                            android:textColor="#03045E"
                            android:textSize="16sp" />
                        <TextView
                            android:id="@+id/yearly_income"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/alata"
                            android:textColor="@color/material_white"
                            android:textSize="16sp" />
                    </LinearLayout>
                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/issued_invoices_card"
                    android:background="?attr/selectableItemBackground"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="25dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="25dp"
                    android:padding="16dp"
                    app:cardCornerRadius="12dp"
                    style="@style/cardViewTheme"
                    app:cardElevation="8dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:strokeWidth="0dp">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="16dp"
                        android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/alata"
                        android:text="@string/issued_invoices_n180"
                        android:textColor="#03045E"
                        android:textSize="20sp" />

                        <TextView
                            android:id="@+id/issued_invoices"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:fontFamily="@font/alata"
                            android:textColor="@color/material_white"
                            android:textSize="20sp" />
                    </LinearLayout>

                </com.google.android.material.card.MaterialCardView>
            </LinearLayout>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="25dp"
                android:layout_weight="1"
                style="@style/cardViewTheme"
                app:cardCornerRadius="12dp"
                app:cardElevation="6dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:strokeWidth="0dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <com.makeramen.roundedimageview.RoundedImageView
                        android:id="@+id/profile"
                        android:layout_width="68dp"
                        android:layout_height="68dp"
                        android:layout_marginEnd="6dp"
                        android:src="@drawable/thanos"
                        app:riv_corner_radius="34dp" />

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ellipsize="end"
                            android:fontFamily="@font/alata"
                            android:maxLines="1"
                            android:textColor="#03045E"
                            android:textSize="20sp" />

                        <TextView
                            android:id="@+id/email"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ellipsize="end"
                            android:fontFamily="@font/alata"
                            android:maxLines="1"
                            android:textColor="@color/material_white"
                            android:textSize="18sp"
                            tools:text="shashankmistry30@gmail.com" />

                    </LinearLayout>

                    <androidx.appcompat.widget.AppCompatImageButton
                        android:id="@+id/edit_profile"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:layout_margin="5dp"
                        android:background="?attr/selectableItemBackgroundBorderless"
                        android:src="@drawable/edit_white"
                        tools:ignore="SpeakableTextPresentCheck" />

                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/materialCardView3"
                android:layout_width="wrap_content"
                android:layout_height="270dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                style="@style/cardViewTheme"
                android:layout_marginBottom="20dp"
                android:layout_weight="1"
                android:padding="12dp"
                app:cardCornerRadius="12dp"
                app:cardElevation="6dp"
                app:strokeWidth="0dp">

                <com.broooapps.graphview.CurveGraphView
                    android:id="@+id/cgv"
                    android:layout_width="wrap_content"
                    android:layout_marginEnd="30dp"
                    android:layout_height="250dp"
                    android:layout_margin="16dp">

                </com.broooapps.graphview.CurveGraphView>

            </com.google.android.material.card.MaterialCardView>
        </LinearLayout>
    </ScrollView>


</LinearLayout>